adding a match details

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -45,6 +45,8 @@
         android:paddingEnd="10dp"
         android:textColorHint="@color/gray_on"
         android:hint="@string/email"
+        android:ems="10"
+        android:singleLine="true"
         android:textColor="@color/white"
         android:inputType="textEmailAddress"
         android:textSize="15sp"
@@ -67,6 +69,8 @@
         android:paddingEnd="10dp"
         android:textColorHint="@color/gray_on"
         android:hint="@string/password"
+        android:ems="10"
+        android:singleLine="true"
         android:textColor="@color/white"
         android:inputType="textPassword"
         android:textSize="15sp"
