--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -8,7 +8,6 @@
     android:background="@color/black_2"
     tools:context=".ui.SignUpActivity">
 
-
     <ImageView
         android:id="@+id/ic_back_signup"
         android:layout_width="wrap_content"
@@ -34,11 +33,33 @@
         app:layout_constraintTop_toTopOf="parent"
         android:contentDescription="@string/app_name"/>
 
+
+    <EditText
+        android:id="@+id/edt_name_signup"
+        android:layout_width="320dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="45dp"
+        android:layout_marginStart="45dp"
+        android:drawableStart="@drawable/ic_person_outline"
+        android:drawablePadding="10dp"
+        android:paddingStart="5dp"
+        android:paddingEnd="10dp"
+        android:textColorHint="@color/gray_on"
+        android:hint="@string/user_name"
+        android:textColor="@color/white"
+        android:inputType="textPersonName"
+        android:textSize="15sp"
+        android:background="@drawable/custom_edit_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/image" />
+
     <EditText
         android:id="@+id/edt_email_signup"
         android:layout_width="320dp"
         android:layout_height="55dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="15dp"
         android:layout_marginEnd="45dp"
         android:layout_marginStart="45dp"
         android:drawableStart="@drawable/ic_email"
@@ -53,7 +74,7 @@
         android:background="@drawable/custom_edit_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/image" />
+        app:layout_constraintTop_toBottomOf="@+id/edt_name_signup" />
 
 
     <EditText
