--- a/app/src/main/res/layout/liga_matches.xml
+++ b/app/src/main/res/layout/liga_matches.xml
@@ -57,7 +57,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="90dp"
-        android:id="@+id/barcavareal"
+        android:id="@+id/barcaVSreal"
         android:layout_below="@id/ligaSpain_linear"
         app:cardBackgroundColor="@color/black_3"
         android:layout_marginTop="15dp"
@@ -138,7 +138,7 @@
         android:layout_width="match_parent"
         android:layout_height="90dp"
         android:id="@+id/atletico"
-        android:layout_below="@id/barcavareal"
+        android:layout_below="@id/barcaVSreal"
         app:cardBackgroundColor="@color/black_3"
         android:layout_marginTop="10dp"
         app:cardCornerRadius="15dp"
